# chain-of-thought

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  app.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
apps/api/: Cargo.toml
apps/api/src/: main.rs  types.rs
apps/api/src/routes/: mod.rs  run_simulation.rs  simulation.rs
apps/sdk/: README.md  app.html  dummy.ts  index.html  package.json
apps/sdk/src/: app.tsx  graph.ts  parse.ts
apps/sdk/src/components/: createProcessStep.tsx  step-dropdown.tsx
apps/sdk/src/components/tabs/: environment..tsx  process.tsx  run.tsx
apps/sdk/src/hooks/: useSelectedProcessNode.ts
apps/sdk/src/models/: process.ts
apps/sdk/src/stores/: environment.store.ts  steps.store.ts
apps/sdk/src/utils/: domUtil.ts  nodeUtil.ts
src/: app.tsx
